--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.25.1",
     "mongoose": "^5.7.1",
-    // "multer": "^1.4.2",
-    // "multer-s3": "^2.9.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "read-excel-file": "^4.0.6",
     "socket.io": "^2.3.0"
   },
